# tempest-math

./: .gitmodules  .travis.yml  CMakeLists.txt  GatherSources.cmake  LICENSE  README.md  appveyor.yml
math/: CMakeLists.txt  assert.h  compare.h  compare.inl  config.h  math_common.h  math_common.inl  tstmath.h  vec.h  vec4.h  vec4.inl  vec_utils.h  vec_utils.inl
src/: assert.h  config.h  math_common.h  math_common.inl  tstmath.h  vec4.h  vec4.inl
test/: CMakeLists.txt
test/unit_test/: CMakeLists.txt  compare_test.cpp  math_common_test.cpp  test_runner.cpp  vec4_test.cpp  vec_utils_test.cpp
